# Quantum-Sandbox

./: .gitignore  README.md  pyproject.toml
.github/workflow/: coherence-check.yml
core_physics/: auditor_logic.py  bell_test.py  harmonic_oscillator.py  neuro_state.py  operators.py  reality_render.py  universal_clock.py  wave_mechanics.py
docs/: generate_assets.py
speculative_math/: bayesian_psi.py
tests/: test_auditor.py  test_causality.py  test_chronos.py  test_core.py  test_neuro_purity.py  test_oscillator.py
theory/: array_offsets_and_vacuum_states.md  born_identity.md  commutation_and_interference.md  field_quanta_and_bosons.md  kinetic_mass_and_relativity.md  ladder_operators_and_vibration.md  light_cone_latency.md  measurement_artifacts.md  network_auditor_sync.md  neuro_quantum_error_correction.md  non_linear_observables.md  observer_baseline.md  pauli_jung_framework.md  universal_time.md
