[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-sandbox"
version = "0.1.0"
description = "A bridge between Standard Quantum Mechanics and Bayesian Consciousness models."
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "qiskit>=0.44.0",
    "qiskit-aer>=0.12.0",
]

[tool.setuptools.packages.find]
include = ["core_physics*", "speculative_math*"]